@@ -1,20 +1,30 @@
-# -*- test-case-name: twisted.web.test.test_jsonrpc -*-
+# -*- test-case-name: twisted.web.test.test_xmlrpc -*-
 #
 # Copyright (c) 2001-2004 Twisted Matrix Laboratories.
 # See LICENSE for details.
 
-"""Test JSON-RPC support."""
+# 
 
-import time
+"""Test XML-RPC support."""
 
+import xmlrpclib
+from adytum.twisted.web2 import xmlrpc
+from twisted.web2 import server
+from twisted.web2.channel import http
+from adytum.twisted.web2.xmlrpc import JSONRPC, addIntrospection
 from twisted.trial import unittest
-from twisted.web import server, static
 from twisted.internet import reactor, defer
 from twisted.python import log
 
-from adytum import jsonrpclib
+try:
+    from adytum.twisted.web.jsonrpc import Proxy
+except ImportError:
+    Proxy = None
+
 from adytum.twisted.web import jsonrpc
 from adytum.twisted.web.jsonrpc import JSONRPC, addIntrospection
+
+import time
 
 class TestRuntimeError(RuntimeError):
     pass
@@ -28,76 +38,66 @@ class Test(JSONRPC):
     NOT_FOUND = 23
     SESSION_EXPIRED = 42
 
+    addSlash = True # cause it's at the root
+    
     # the doc string is part of the test
-    def jsonrpc_add(self, a, b):
+    def xmlrpc_add(self, request, a, b):
         """This function add two numbers."""
         return a + b
 
-    jsonrpc_add.signature = [['int', 'int', 'int'],
+    xmlrpc_add.signature = [['int', 'int', 'int'],
                             ['double', 'double', 'double']]
 
     # the doc string is part of the test
-    def jsonrpc_pair(self, string, num):
+    def xmlrpc_pair(self, request, string, num):
         """This function puts the two arguments in an array."""
         return [string, num]
 
-    jsonrpc_pair.signature = [['array', 'string', 'int']]
+    xmlrpc_pair.signature = [['array', 'string', 'int']]
 
     # the doc string is part of the test
-    def jsonrpc_defer(self, x):
+    def xmlrpc_defer(self, request, x):
         """Help for defer."""
         return defer.succeed(x)
 
-    def jsonrpc_deferFail(self):
+    def xmlrpc_deferFail(self, request):
         return defer.fail(TestValueError())
 
     # don't add a doc string, it's part of the test
-    def jsonrpc_fail(self):
+    def xmlrpc_fail(self, request):
         raise TestRuntimeError
 
-    def jsonrpc_fault(self):
-        return jsonrpclib.Fault(12, "hello")
+    def xmlrpc_fault(self, request):
+        return xmlrpc.Fault(12, "hello")
 
-    def jsonrpc_deferFault(self):
-        return defer.fail(jsonrpclib.Fault(17, "hi"))
+    def xmlrpc_deferFault(self, request):
+        return defer.fail(xmlrpc.Fault(17, "hi"))
 
-    def jsonrpc_complex(self):
+    def xmlrpc_complex(self, request):
         return {"a": ["b", "c", 12, []], "D": "foo"}
 
-    def jsonrpc_dict(self, map, key):
+    def xmlrpc_dict(self, request, map, key):
         return map[key]
 
-    def _getFunction(self, functionPath):
+    def getFunction(self, functionPath):
         try:
-            return JSONRPC._getFunction(self, functionPath)
-        except jsonrpclib.NoSuchFunction:
+            return JSONRPC.getFunction(self, functionPath)
+        except xmlrpc.NoSuchFunction:
             if functionPath.startswith("SESSION"):
-                raise jsonrpclib.Fault(self.SESSION_EXPIRED, "Session non-existant/expired.")
+                raise xmlrpc.Fault(self.SESSION_EXPIRED, "Session non-existant/expired.")
             else:
                 raise
 
-    jsonrpc_dict.help = 'Help for dict.'
+    xmlrpc_dict.help = 'Help for dict.'
 
-class TestAuthHeader(Test):
-    """
-    This is used to get the header info so that we can test
-    authentication.
-    """
-    def __init__(self):
-        Test.__init__(self)
-        self.request = None
-
-    def render(self, request):
-        self.request = request
-        return Test.render(self, request)
-
-    def jsonrpc_authinfo(self):
-        return self.request.getUser(), self.request.getPassword()
 
 class JSONRPCTestCase(unittest.TestCase):
+    
+    if not Proxy:
+        skip = "Until web2 has an XML-RPC client, this test requires twisted.web."
 
     def setUp(self):
-        self.p = reactor.listenTCP(0, server.Site(Test()),
+        self.p = reactor.listenTCP(0, http.HTTPFactory(server.Site(Test())),
                                    interface="127.0.0.1")
         self.port = self.p.getHost().port
 
@@ -105,7 +105,7 @@ class JSONRPCTestCase(unittest.TestCase):
         return self.p.stopListening()
 
     def proxy(self):
-        return jsonrpc.Proxy("http://127.0.0.1:%d/" % self.port)
+        return Proxy("http://127.0.0.1:%d/" % self.port)
 
     def testResults(self):
         inputOutput = [
@@ -125,10 +125,10 @@ class JSONRPCTestCase(unittest.TestCase):
     def testErrors(self):
         dl = []
         for code, methodName in [(666, "fail"), (666, "deferFail"),
-                                 (12, "fault"), (-32601, "noSuchMethod"),
+                                 (12, "fault"), (23, "noSuchMethod"),
                                  (17, "deferFault"), (42, "SESSION_TEST")]:
             d = self.proxy().callRemote(methodName)
-            d = self.assertFailure(d, jsonrpclib.Fault)
+            d = self.assertFailure(d, xmlrpc.Fault)
             d.addCallback(lambda exc, code=code: self.assertEquals(exc.faultCode, code))
             dl.append(d)
         d = defer.DeferredList(dl, fireOnOneErrback=True)
@@ -140,45 +140,16 @@ class JSONRPCTestCase2(JSONRPCTestCase):
     """Test with proxy that doesn't add a slash."""
 
     def proxy(self):
-        return jsonrpc.Proxy("http://127.0.0.1:%d" % self.port)
-
-
-class JSONRPCTestAuthenticated(JSONRPCTestCase):
-    """
-    Test with authenticated proxy. We run this with the same inout/ouput as
-    above.
-    """
-    user = "username"
-    password = "asecret"
-
-    def setUp(self):
-        self.p = reactor.listenTCP(0, server.Site(TestAuthHeader()),
-                                   interface="127.0.0.1")
-        self.port = self.p.getHost().port
-
-
-    def testAuthInfoInURL(self):
-        p = jsonrpc.Proxy("http://%s:%s@127.0.0.1:%d/" % (self.user, self.password, self.port))
-        return p.callRemote("authinfo").addCallback(self.assertEquals, [self.user, self.password])
-
-
-    def testExplicitAuthInfo(self):
-        p = jsonrpc.Proxy("http://127.0.0.1:%d/" % (self.port,), self.user, self.password)
-        return p.callRemote("authinfo").addCallback(self.assertEquals, [self.user, self.password])
-
-
-    def testExplicitAuthInfoOverride(self):
-        p = jsonrpc.Proxy("http://wrong:info@127.0.0.1:%d/" % (self.port,), self.user, self.password)
-        return p.callRemote("authinfo").addCallback(self.assertEquals, [self.user, self.password])
-
+        return Proxy("http://127.0.0.1:%d" % self.port)
 
 
 class JSONRPCTestIntrospection(JSONRPCTestCase):
 
     def setUp(self):
-        jsonrpc = Test()
-        addIntrospection(jsonrpc)
-        self.p = reactor.listenTCP(0, server.Site(jsonrpc),interface="127.0.0.1")
+        xmlrpc = Test()
+        addIntrospection(xmlrpc)
+        self.p = reactor.listenTCP(0, http.HTTPFactory(server.Site(xmlrpc)),
+            interface="127.0.0.1")
         self.port = self.p.getHost().port
 
     def testListMethods(self):
@@ -224,16 +195,3 @@ class JSONRPCTestIntrospection(JSONRPCTestCase):
             dl.append(d)
         return defer.DeferredList(dl, fireOnOneErrback=True)
 
-
-class JSONRPCClientErrorHandling(unittest.TestCase):
-    def setUp(self):
-        self.resource = static.File(__file__)
-        self.resource.isLeaf = True
-        self.port = reactor.listenTCP(0, server.Site(self.resource), interface='127.0.0.1')
-
-    def tearDown(self):
-        return self.port.stopListening()
-
-    def testErroneousResponse(self):
-        proxy = jsonrpc.Proxy("http://127.0.0.1:%d/" % (self.port.getHost().port,))
-        return self.assertFailure(proxy.callRemote("someMethod"), Exception)
